<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".CreateGroupActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/group_name_header"
                style="@style/ActivMatch.Header"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/group_name_hint"
                android:maxLength="30"
                android:maxLines="1"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/group_range_header"
                style="@style/ActivMatch.Header"/>

            <android.support.design.button.MaterialButton
                android:id="@+id/group_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:elevation="3dp"
                android:text="@string/group_range_hint"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:backgroundTint="@color/light_gray"
                app:cornerRadius="20dp"
                style="@style/AppTheme"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/group_description_header"
                style="@style/ActivMatch.Header"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/group_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/group_description_hint"
                android:maxLength="200"
                android:lines="5"
                android:gravity="start|top"
                android:imeOptions="flagNoExtractUi"
                android:scrollbars="vertical"
                android:inputType="textMultiLine|textCapSentences"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>